test/syntax/fail/unknown_type.sync
let f (x : foo) = x
